--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="ru"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>База пользователей</title><script defer="defer" src="/main.7d5f2290e39ae7e4b1cc.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>База пользователей</title><script defer="defer" src="/users-db-app/main.a9f317c81d9f6d4f1008.js"></script></head><body><div id="root"></div></body></html>
